[gd_scene load_steps=15 format=2]

[ext_resource path="res://ui/main/Main.gd" type="Script" id=1]
[ext_resource path="res://ui/themes/default-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/image/items.png" type="Texture" id=3]
[ext_resource path="res://assets/font/silver-dynamic-font-10.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/font/Silver.ttf" type="DynamicFontData" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 80, 16, 16, 16 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
extra_spacing_bottom = -4
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("Panel/DetailPanel:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Panel/DetailPanel:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Panel/DetailPanel:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Panel/DetailPanel:rect_position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Panel/DetailPanel:rect_position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 200, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.4 )
}

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("Panel/DetailPanel:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Panel/DetailPanel:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Panel/DetailPanel:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Panel/DetailPanel:rect_position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Panel/DetailPanel:rect_position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[node name="Main" type="CanvasLayer"]
layer = 3
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -68.0
margin_right = 28.5
margin_bottom = -52.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 1 )

[node name="Label" type="Label" parent="Panel/HBoxContainer"]
margin_left = 20.0
margin_right = 57.0
margin_bottom = 16.0
size_flags_vertical = 1
text = "魔塔 16 层"
valign = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -30.5
margin_right = 61.0
margin_bottom = 61.5
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="Panel/VBoxContainer"]
margin_right = 122.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "新的冒险"

[node name="Continue" type="Button" parent="Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 122.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
text = "继续游戏"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 122.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 20 )
text = "退出游戏"

[node name="About" type="Button" parent="Panel/VBoxContainer"]
margin_top = 72.0
margin_right = 122.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 20 )
text = "相关信息"

[node name="DetailPanel" type="Panel" parent="Panel"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 200.0
margin_bottom = 200.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 152, 104 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/DetailPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/DetailPanel/ScrollContainer"]
margin_right = 300.0
margin_bottom = 281.0
size_flags_horizontal = 3
custom_constants/margin_top = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/DetailPanel/ScrollContainer/MarginContainer"]
margin_left = 75.0
margin_top = 30.0
margin_right = 225.0
margin_bottom = 251.0
size_flags_horizontal = 4

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/DetailPanel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 221.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[ 作品信息 ]
- 名称: 魔塔 16
- 版本: v0.1
- Github: [color=aqua][url=https://github.com/qixiaoo/mota16]mota16[/url][/color]

[ 快捷鍵 ]
- S: 存档/讀档
- Esc: 退出
- ↑ ← ↓ →: 控制移动

[ 第三方依賴 ]
- [color=aqua][url=https://poppyworks.itch.io/silver]silver pixel font[/url][/color] by [color=aqua][url=https://poppyworks.itch.io/]Poppy Works, Wolfgang Wozniak[/url][/color] is licensed under [color=aqua][url=https://creativecommons.org/licenses/by/4.0/]CC BY 4.0[/url][/color]. 
- [color=aqua][url=https://freesound.org/s/192364]Dinosaur.wav[/url][/color] by [color=aqua][url=https://freesound.org/people/jamesrodavidson/]jamesrodavidson[/url][/color] is licensed under [color=aqua][url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url][/color]. 
- [color=aqua][url=https://freesound.org/s/393067/]electricity.wav[/url][/color] by [color=aqua][url=https://freesound.org/people/Wakerone/]Wakerone[/url][/color] is licensed under [color=aqua][url=https://creativecommons.org/publicdomain/zero/1.0/]CC0 1.0[/url][/color]. "
text = "[ 作品信息 ]
- 名称: 魔塔 16
- 版本: v0.1
- Github: mota16

[ 快捷鍵 ]
- S: 存档/讀档
- Esc: 退出
- ↑ ← ↓ →: 控制移动

[ 第三方依賴 ]
- silver pixel font by Poppy Works, Wolfgang Wozniak is licensed under CC BY 4.0. 
- Dinosaur.wav by jamesrodavidson is licensed under CC BY 3.0. 
- electricity.wav by Wakerone is licensed under CC0 1.0. "
fit_content_height = true

[node name="Button" type="Button" parent="Panel/DetailPanel"]
margin_left = 281.0
margin_top = 9.0
margin_right = 294.0
margin_bottom = 24.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide-detail = SubResource( 8 )
anims/show-detail = SubResource( 9 )
[connection signal="pressed" from="Panel/VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="meta_clicked" from="Panel/DetailPanel/ScrollContainer/MarginContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="pressed" from="Panel/DetailPanel/Button" to="." method="_on_Button_pressed"]
